[package]
name = "rag-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[dependencies]
anyhow = "1.0.79"
ollama-rs = { version = "0.1", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
walkdir = "2.4.0"
simple-fs = "0.1.1"
