[package]
name = "rag-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[dependencies]
# I created a PR to text-splitter that will make the direct declaration of tokenizers unecessary
tokenizers = { version = "0.15", features = ["http"] }
anyhow = "1.0"
ollama-rs = { version = "0.1", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "2.0"
text-splitter = { version = "0.6", features = ["tokenizers"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate"] }
pgvector = { version = "0.3", features = ["sqlx"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"
